src/objects/LOG_LogMessage__c.object
<CustomObject>
    <description>Container for custom exception/log messages</description>
    <fields>
        <fullName>LOG_Age__c</fullName>
        <description>Age in Days</description>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age in Days</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOG_Debug_Level__c</fullName>
        <description>Debug Level</description>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOG_Integration_Payload__c</fullName>
        <description>If log is integration related show xml payload</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If log is integration related show xml payload</inlineHelpText>
        <label>Integration Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOG_Log_Code__c</fullName>
        <description>LOG LogMessage: the exception error code of custom org code for record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>LOG LogMessage: the exception error code of custom org code for record</inlineHelpText>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOG_Log_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOG_Message__c</fullName>
        <description>Message to log</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Message to log</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOG_Reference_Id__c</fullName>
        <description>The related record Id</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The related record Id</inlineHelpText>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOG_Reference_Info__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The related record info (e.g. Apex Batch Job Id, Contact etc)</inlineHelpText>
        <label>Reference Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOG_Source_Function__c</fullName>
        <description>The originating function in the class/component</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The originating function in the class/component</inlineHelpText>
        <label>Source Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOG_Source__c</fullName>
        <description>The originating class/component of log message</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The originating component of log message</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOG_Stack_Trace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Raw exception stack trace for unhandled errors</inlineHelpText>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOG_Timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <inlineHelpText>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</inlineHelpText>
        <label>ExecutionTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Log Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LOG_Log_Date_Time__c</columns>
        <columns>LOG_Debug_Level__c</columns>
        <columns>LOG_Source__c</columns>
        <columns>LOG_Source_Function__c</columns>
        <columns>LOG_Log_Code__c</columns>
        <columns>LOG_Message__c</columns>
        <columns>LOG_Reference_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Message #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>